--- a/18-divademecum.tex
+++ b/18-divademecum.tex
@@ -1,4 +1,4 @@
-\chapter{VADEMECUM}
+\chapter{VADEMECUM\label{chap:divademecum}}
 
 
 The DIVADEMECUM is a four-page summary of the commands and the input/output files you have to deal with when using \diva.
