--- a/3-DivaConditionUse.tex
+++ b/3-DivaConditionUse.tex
@@ -45,14 +45,19 @@ All SeaDataNet products (data and software) are freely distributed to the scient
 \vspace{1cm}
 \normalsize
 
-This \diva User Guide aims to cover all the aspects of the methods: the theory (Part~\ref{part:theory}), the two-dimension version (Part~\ref{part:2Dimplementation}), the climatology production with GODIVA (Part~\label{part:godiva}) and the description of the scripts and the Fortran code (Part~\label{part:appendix}). 
+This \diva User Guide aims to cover all the aspects of the methods: the theory (Part~\ref{part:theory}), the two-dimension version (Part~\ref{part:2Dimplementation}), the climatology production with GODIVA (Part~\ref{part:godiva}) and the description of the scripts and the Fortran code (Part~\ref{part:appendix}). 
 
-The user who directly wants to perform analysis shall start with Part~\ref{part:2Dimplementation}, which describes the input files and provides examples of realistic, simple runs. The \diva-demecum (Chapter~\ref{18-divademecum}) is particularly useful to have a small summary of all the commands and options.
+The user who directly wants to perform analysis shall start with Part~\ref{part:2Dimplementation}, which describes the input files and provides examples of realistic, simple runs. The \diva-demecum (Chapter~\ref{chap:divademecum}) is particularly useful to have a small summary of all the commands and options.
 
 For more theoretical developments, the user is invited to read Part~\ref{part:theory} as well as the corresponding bibliography.
 
- 
-
+To make easier the reading of the document, different font colors are used for different type of files:
+\begin{itemize}
+\item \file{the files} (ascii or binary),
+\item \command{the commands} (which can also be ascii files, but that are executable),
+\item \directory{the directories}.
+\end{itemize}
+Various example files are provided for different situations. 
 
 
 \vspace{.25cm}
