--- a/6-DivaParameters.tex
+++ b/6-DivaParameters.tex
@@ -18,11 +18,11 @@ This example employs salinity measurements in the Mediterranean Sea at a depth o
 
 The regular grid for the analysis extends from 7$^{\circ}$W to 36$^{\circ}$E and from 30$^{\circ}$15'N to 45$^{\circ}$45'N, with a horizontal resolution of about 10~km. Measurements in the Black Sea and the Atlantic Ocean were removed in order to concentrate only on the Mediterranean Sea properties. The land-sea contours are created from the GEBCO bathymetry.
 
-\begin{figure*}[h!]
+\begin{figure}[h!]
 \centering
 \includegraphics[width=.9\textwidth,bb=14 254 588 561]{diva_oi_09_10030dataval_mesh3}
 \caption{Finite-element mesh and salinity measurements used for the application.\label{fig:diva_oi_09_10030dataval_mesh3}}
-\end{figure*}
+\end{figure}
 
 The fit yields the value $L=1.42^{\circ}$ ($\simeq$ 160~km).
 
