--- a/7-DivaError.tex
+++ b/7-DivaError.tex
@@ -306,7 +306,7 @@ We could calculate the covariances matrices involved exactly (as done for the ex
 
 \subsubsection{Direct approach}
 
-Using \eqref{eq:covariance} and \label{eq:errorintegral} we can write
+Using \eqref{eq:covariance} and \eqref{eq:errorintegral} we can write
 
  \begin{equation}
  \Delta^2 = \transp{\mathbf{h}}\, \mathbf{P} \, \mathbf{h} - \transp{\mathbf{h}} \underbrace{\transp{\mathbf{C}} \left( \mathbf{B}+\mathbf{R} \right)^{-1}} \, \underbrace{\mathbf{C}  \, \mathbf{h}}
