--- a/0-DivaHeader2012.tex
+++ b/0-DivaHeader2012.tex
@@ -43,6 +43,7 @@
 \usepackage{texgraph}
 \usepackage{epic,eepic}
 \usepackage{rotating}
+\usepackage{etex}
 
 \lstdefinestyle{Bash}
 {language=bash,
