--- a/3-DivaConditionUse.tex
+++ b/3-DivaConditionUse.tex
@@ -45,7 +45,7 @@ All SeaDataNet products (data and software) are freely distributed to the scient
 \vspace{1cm}
 \normalsize
 
-This \diva User Guide aims to cover all the aspects of the methods: the theory (Part~\ref{part:theory}), the two-dimension version (Part~\ref{part:2Dimplementation}), the climatology production with GODIVA (Part~\ref{part:godiva}) and the description of the scripts and the Fortran code (Part~\ref{part:appendix}). 
+This \diva User Guide aims to cover all the aspects of the methods: the theory (Part~\ref{part:theory}), the two-dimension version (Part~\ref{part:2Dimplementation}), the climatology production with GODIVA \index{GODIVA}(Part~\ref{part:godiva}) and the description of the scripts and the Fortran code (Part~\ref{part:appendix}). 
 
 The user who directly wants to perform analysis shall start with Part~\ref{part:2Dimplementation}, which describes the input files and provides examples of realistic, simple runs. The \diva-demecum (Chapter~\ref{chap:divademecum}) is particularly useful to have a small summary of all the commands and options.
 
