--- a/15-Godiva.tex
+++ b/15-Godiva.tex
@@ -1,28 +1,670 @@
-\chapter{\diva\ 3-D analyses\label{chap:diva3D}}
-%------------------------
+\chapter{Climatologies production: \diva 4D\label{chap:diva4D}}
 
-\lettrine[lines=2, loversize=-0.1, lraise=0.1]{W}{e} describe here the basic requirements in order to perform a 3-D \diva\, analysis.
+\diva  can be used to produce climatologies for a given variable in an oceanic basin. In this case \diva 3D tools are used to produce for successive climatological time periods, 3D climatological analyses on the basin. The resulting climatologies are gathered in 4D binary files GHER format and NetCDF.
 
-\vspace{2cm}
+The working directory to performs 4D-analyses is : \underline{\directory{GODIVA\_2013/JRAx/Climatology}}.
 
 \minitoc
 
-\vspace{2cm}
 
-\include{15-3DAnalyses}
+\section{CLimatology definition}
 
-
-\chapter{\diva\ Climatologies production: GODIVA \label{chap:divaclim}}
-%------------------------
+The Climatologies to be produced are first defined by the mean of three files:
 
 
-%\lettrine[lines=2, loversize=-0.1, lraise=0.1]{W}{e} describe here the basic requirements in order to perform a 3-D \diva\, analysis.
+\begin{center}
+\begin{tabular}{ll}\hline
+\file{varlist}: & one column file, where each line defines the short name of a variable \\
+ &  (see example \ref{varlistexp}).\\
+\file{yearlist}:& one column file, where the lines define the time period of years  over\\
+ & which the climatologies (of the variables) are performed (see example \ref{yearlistexp}). \\
+\file{monthlist}: & one column file, where the lines define the time period in the year\\
+ &  for which the climatologies (of the variables) are performed (see example \ref{monthlistexp}). \\
+\hline
+\end{tabular}
+\end{center}
+ 
 
-%\vspace{2cm}
+\begin{center}
+\begin{exfile}[H] %[htpb]
+\begin{footnotesize}
+\begin{verbatim}
+Temperature
+Salinity
+\end{verbatim}
+\end{footnotesize}
+\caption{\file{varlist}}
+\label{varlistexp}
+\end{exfile}
+\end{center}
 
-%\minitoc
+\begin{center}
+\begin{exfile}[H] %[htpb]
+\begin{footnotesize}
+\begin{verbatim}
+19001950
+19501980
+19802012
+\end{verbatim}
+\end{footnotesize}
+\caption{\file{yearlist}}
+\label{yearlistexp}
+\end{exfile}
+\end{center}
+ 
+\begin{center}
+\begin{exfile}[H] %[htpb]
+\begin{footnotesize}
+\begin{verbatim}
+0103
+0406
+0709
+1012
+\end{verbatim}
+\end{footnotesize}
+\caption{\file{monthlist}}
+\label{monthlistexp}
+\end{exfile}
+\end{center}
 
-%\vspace{2cm}
 
-%\include{15-4DAnalyses}
+\begin{center}
+\fbox{
+\begin{minipage}{0.9\textwidth}
+\vspace{.25cm}
+\textbf{Convention:} 
+\begin{itemize}
+\item In \file{yearlist}, each time period must be in an eight digits number such as $yyyyzzzz$ where $yyyy$ is the start year and $zzzz$ the end year time period.
+\item  In \file{monthlist}, each time period must be in a four digits number such as $mmnn$ where $mm$ is the start month and $nn$ the last month numbers.
+\end{itemize}
+\vspace{.25cm} 
+\end{minipage}
+}
+\end{center}
+
+\section{\diva 4D Climatology performence}
+
+All  \diva\ shell scripts files for climatologies (or 4D-analyses) production are located in \par \directory{GODIVA\_2013/JRAx/Climatology}. This directory has its proper subdirectories \directory{input} where input data and files are placed, and \directory{output} where \diva\ outputs are stored.
+
+The main shell script file for climatologies performence is \file{divadoall}. The actions that one can perfom when running \file{divadoall} are:
+
+\subsection{Actions performed by \file{divadoall} }
+
+\begin{itemize}
+\item Depths data sets extraction.
+\item Boundary lines and coastlines generation (contour files).
+\item ``Advection'' field (based on coast lines) generation.
+\item Data cleaning on mesh.
+\item Outliers elimination from data sets.
+\item Generation of Relative Length fields.
+\item Optimization of the correlation length parameter (for each data set).
+\item Optimization of the signal to noise ratio parameter (for each data set).
+\item Calculation of variable (semi normed) reference fields.
+\item Performance of variable analysis fields using the following options:
+\begin{itemize}
+\item analysis without option (normal variational analysis),
+\item analysis using a reference fields,
+\item analysis using ``advection'' constraint,
+\item analysis with data transformation,
+\item analysis using reference fields for each level calculated on bases of mixed data from three  neighbouring levels,
+\item analysis using a ``filtered'' mean backgoung field: all levels mean are first calculated an vertically filtered before being used  3D analyses.
+\end{itemize}
+\item Gnuplot plots production.
+\item Performances of analysis using data detrending method.
+\end{itemize}
+
+
+
+
+\centerline{
+\begin{tabular}{|l|}
+\hline
+{\bf Note:} \\All actions performed by \file{divadoall} are prescribed in the file \file{driver} \\
+ through flag values (see section \ref{driverflags} and example \ref{driverfile}).\\
+\hline
+\end{tabular}
+}
+
+
+{\bf Note:}
+\begin{itemize}
+\item[*] When data extraction is activated in the \file{driver}, the execution is made for all levels found in \file{contour.depth} file provided in the subdirectory \file{input}. It is also taking into account a minimum number of data in a layer with regard to the corresponding flag value given in \file{driver}.
+\item[*] When ``boundary lines and coastlines'' generation is activated in the \file{driver}, the execution is made for all levels found in \file{contour.depth} file provided in the subdirectory \directory{input}.
+\item[*] When parameters optimisation and/or analysis is activated, the execution is made for the levels between the values choosen for the lower and upper level numbers and takes into account the bound values (maximum and minimum) prescribed in the \file{driver}.
+\end{itemize}
+
+
+%\subsubsection{Inputs for actions performed by \file{divadoall}:}
+
+\centerline{\underline{\bf All actions  performed by \file{divadoall} use the input files:}}
+
+\vspace{0.5cm}
+
+\centerline{
+\begin{tabular}{|c|l|}
+\hline 
+\file{varlist} & \\
+\file{yearlist} & in \directory{climatology} directory \\
+\file{monthlist} & \\
+\hline
+\file{contour.depth} &  in \directory{climatology/input} directory \\
+\hline
+\file{param.par} &  in \directory{climatology/input} or in \\
+                 & \directory{climatology/input/divaparam} directory \\
+\hline
+\end{tabular}
+}
+
+\section{Input data preparation}
+
+\subsection{Inputs for input data preparation actions}
+
+
+In \diva 4D (or Climatology production) we can use all the tools provided in \diva 3D for input data preparation.
+Input data preparation consists in the following actions:
+
+\vspace{-0.5cm}
+
+\begin{itemize}
+\item Data set foles extraction.
+\item Boundary lines and coastlines generation and  ``Advection'' field generation.
+\item Data cleaning on mesh, outliers elimination from data sets and generation of Relative Length fields.
+\item Parameters optimisation and reference fields generation.
+\end{itemize}
+
+%\vspace{-0.5cm}
+
+To performe an action, one has to configure the \file{driver} file and give in the corresponding flag values and run the \file{divadoall} files script. For each action, a specific inputs are needed:
+
+
+%\vspace{1.5cm}
+
+\vspace{0.5cm}
+\centerline{
+\begin{tabular}{|c|l|}
+\hline
+{\bf Action} & {\bf Inputs} \\
+\hline
+    &   \\
+Data extraction  &  \file{darasource} in \directory{Climatology} \\
+                 &  \file{qflist}  in \directory{Climatology} \\
+    &   \\
+\hline
+    &   \\
+ Coastlines generation & \file{topogebco.asc}, \file{topo.gebco} or \file{topo.dat} ascii \\
+ and ``Advection''     & file or \file{topo.grd} GHER binary format file and its \\
+  fields generation     &  related \file{TopoInfo.dat} ascii info-file \\
+    &   \\
+\hline
+    &   \\
+Data cleaning on mesh,  & \directory{divadata} a directory which contains data set files of the considered \\
+ outliers  elimination  and  &  layers, {\directory{divaparam}} a  directory which contains coastlines \\
+generation of relative     &  {\file{coast.cont.$100xx$}} files for all considered layers and a \file{param.par} \\
+ length fields         &  file in \directory{input} or \directory{input/divaparam} directory \\
+    &   \\
+\hline
+    &   \\
+Parameters optimisation &  {\directory{divadata}} directory which contains the data set \\
+ ($L$ and $S/N$)        & files of the considered depths {\directory{divaparam}} directory \\
+                        & which contains coastlines {\file{coast.cont.$100xx$}} files of\\
+                        & the considered basin, and a(template) {\file{param.par}} file  \\
+                        & in \directory{input} or \directory{input/divaparam} directory.\\
+    &   \\
+\hline
+    &   \\
+Reference fields &  {\directory{divadata}} directory which contains the data set files\\
+generation       &  of the considered depths and time periods {\directory{divaparam}} directory \\
+                 &  which contains coastlines {\file{coast.cont.$100xx$}} files of the \\
+                 &  considered basin, and a(template) {\file{param.par}} file  in \directory{input} or \\
+                 & a {\file{param.par.var.$100xx$}} files  in \directory{input/divaparam} directory.\\
+    &   \\
+\hline
+\end{tabular}
+}
+
+\vspace{1.5cm}
+
+
+\subsection{Outputs of input data preparation actions}
+
+Outputs resulting from a \file{divadoall} run for input data preparation actions are placed in the \directory{input} for data sets extraction and in a \directory{newinput} subdirectory for the other actions as chown in the following table:
+
+\vspace{0.5cm}
+
+\vspace{0.5cm}
+\centerline{
+\begin{tabular}{|c|l|}
+\hline
+{\bf Action} & {\bf Outputs} \\
+\hline
+    &   \\
+Data extraction  & A subdirectory {\directory{divadata}} is created in \\
+                 &  {\directory{input}} directory, and contains all the data sets. \\
+    &   \\
+\hline
+    &   \\
+ Coastlines generation &  A {\directory{newinput}} subdirectory which contains:\\
+ and ``Advection''     &  a subdirectory \directory{divaparam} with the ``{\file{coast.cont.$100xx$}}'' \\
+  field generation     & and  a subdirectory \directory{divaUVcons\_all} containing the\\
+                       & velocity field files \\
+    &   \\
+\hline
+    &   \\
+Data cleaning on       & \\
+ mesh, outliers        &   A {\directory{newinput/divadata}} subdirectory \\
+ elimination  and      &   which contains cleaned data sets and  \\
+generation of relative &  relative length files if generated. \\
+ length fields         & \\
+    &   \\
+\hline
+    &   \\
+Parameters optimisation & A {\directory{newinput/divaparam}} subdirectory which contains \\
+ ($L$ and $S/N$)        & \file {\tt param.par.var.$100xx$} files and summary files of the \\
+                        & optimisation and filtering procedure.\\
+    &   \\
+\hline
+    &   \\
+Reference fields & A {\directory{newinput/divarefe}} subdirectory which contains \\
+generation       & all generated reference fields \\
+    &   \\
+\hline
+\end{tabular}
+}
+
+
+\vspace{0.5cm}
+
+\underline{\bf The sell script file \file{divadocommit}}: In order to be able to use the outputs of input data preparation actions, they must be copied to the \directory{input} directoty. This can be done by runnig the sell script file \file{divadocommit}. 
+
+\vspace{0.5cm}
+{\bf Note:} \\
+\centerline{
+\begin{tabular}{|l|}
+\hline
+\file{divadocommit} replaces input files in \directory{input} directory by the ones \\
+ found in   \directory{newinput} directory assuming that the \file{driver}, \file{varlist},\\
+  \file{yearlist} and \file{monthlist} files are the ones used by \file{divadoall}\\
+  to creat the \directory{newinput} subdirectory on which  \file{divadocommit} is run.\\
+\hline
+\end{tabular}
+}
+\vspace{-0.4cm}
+\begin{itemize}
+\item[*] When reference fields are generated, they are copied by the script file \file{divadocommit} in a subdirectory \directory{input/divarefe\_all}.
+\end{itemize}
+
+
+\begin{exfile}[H]
+\label{ex_driver}
+\begin{footnotesize}
+\begin{verbatim}
+extract flag: 1 do it, 0 do nothing, -1 press coord, -10 pressure+Saunders
+1
+boundary lines and coastlines generation: 0 nothing, 1: contours, 2: UV, 3: 1+2
+1
+cleaning data on mesh: 1, 2: RL, 3: both, 4: 1 + outliers elimination, 5: =4+2
+4
+minimal number of data in a layer. If less, uses data from any month
+10
+isoptimise 0 nothing, 1 L, 2 SN, 3 both,  negative values filter vertically
+0
+Minimal L
+0.1
+Maximal L
+1
+Minimal SN
+0.05
+Maximal SN
+0.5
+2 do reference, 1 do analysis and 0 do nothing
+1
+lowerlevel number
+7
+upperlevel number
+11
+reference (to come)
+0
+isplot 0 or 1
+1
+number of groups for data detrending, 0 if no detrending.
+0
+\end{verbatim}
+\end{footnotesize}
+\caption{The \file{driver} file.} 
+\label{driverfile}
+\end{exfile}
+
+
+%-----------------------------------------------------------------------------------
+%-----------------------------------------------------------------------------------
+%-----------------------------------------------------------------------------------
+
+\section{Production of Climatologies}
+
+\diva 4D allows the production of climatologies based on simple \diva\ data analysis or based on \diva\ analysis using different option as in \diva\ 3D:
+
+\begin{itemize}
+\item relative length files
+\item advection constraint
+\item reference fields and detrending.
+\end{itemize}
+
+
+
+\vspace{-0.5cm}
+
+
+{\bf Note:} These options are automatically acctivated when the appropriat input data are provided.
+
+
+ More options available in \diva\ 4D are:
+
+\begin{itemize}
+\item analyses using vertically filtered mean bckgroung
+\item analyses with data transformation:  $\log$(data)-$\exp$(analysis), and anamorphosis transformations or user defined transfomation
+\item analysis using  a reference field for each layer generated on the basis of all data from the two neighbouring layers in addition to the layer data set.
+\end{itemize}
+
+
+\vspace{-0.5cm}
+
+{\bf Note:} These options are acctivated with a specific falg values in the \file{driver}.
+
+
+\subsection{ Inputs for climatologies production}
+
+\centerline{\underline{\bf{ in \directory{climatology} directory}}}
+
+\vspace{0.5cm}
+
+\centerline{
+\begin{tabular}{|c|l|}
+\hline 
+\file{varlist}   & \\
+\file{yearlist}  & input files defining the climatology \\
+\file{monthlist} & \\
+\hline 
+\file{constandrefe} & input file to acctivate advection \\
+                    & constraint and/or reference fileds \\
+\hline 
+\end{tabular}
+}
+
+\vspace{0.5cm}
+
+\centerline{\underline{\bf{ in \directory{climatology/input} directory}}}
+
+\vspace{0.5cm}
+
+\centerline{
+\begin{tabular}{|c|l|}
+\hline 
+\file{contour.depth}  & file of depth values (see example \ref{contdepthfile}) \\
+\file{param.par}      & file defining the analysis parameters, provided here \\
+                      & if not present in \directory{divaparam} \\
+\file{NCDFinfo}       & Info file containing metadata for NetCDF files (see exaple \ref{NCDFinfoexp})\\
+\hline
+ \directory{divaparam}     & subdirectory containing coastline files \file{coast.cont.$100xx$}\\
+                           & and parameters files \file{param.par.var.$100xx$} \\
+ \directory{divadata}      &  subdirectory containing data set files \\
+                           & \file{var.yyyyzzzz.mmnn.$100xx$}\\
+ \directory{divarefe\_all} & subdirectory containing reference field files (see section \ref{divarefeuse}) \\
+ \directory{divaUVcons\_all} & subdirectory containing advection constraint fields (see section \ref{advconstuse}
+)\\
+\hline
+\end{tabular}
+}
+
+
+
+\begin{center}
+\begin{exfile}[H] %[htpb]
+\begin{footnotesize}
+\begin{verbatim}
+
+ Title string for 3D NetCDF file:
+'Diva 3D analysis '
+ Reference time for data (if not climatological data)
+'months since since xxxx-01-01'
+ Time value (if not climatological data)
+1200
+ Cell_methode string:
+'time: mean (this month data from all years)'
+ Institution name: where the dataset was produced.
+'University of Liege, AGO, GHER'
+ Production group and e-mail
+'Diva group. E-mails : JM.Beckers@ulg.ac.be'
+ Source (observation, radiosonde, database, model-generated data,...)
+' data_from various sources'
+Comment
+'This is only for DIVA developpement and texting work'
+Autor e-mail adress (or contact person to report problems)
+'m.ouberdous@ulg.ac.be'
+
+\end{verbatim}
+\end{footnotesize}
+\caption{\file{NCDFinfo}}
+\label{NCDFinfoexp}
+\end{exfile}
+\end{center}
+
+%\vspace{0.5cm}
+
+\subsection{Advection constraint and reference field files}
+
+
+To perform \diva 4D analyses with  ``advection''  constraint  and/or using reference fields, the advection constraint and reference field files must be provided in the corresponding subdirectory  \directory{divarefe\_all} and  \directory{divaUVcon\_all} in \directory{input} directory (see sections  \ref{divarefeuse} and \ref{advconstuse}).
+
+
+{\bf Note:} 
+
+\centerline{
+\begin{tabular}{|l|}
+\hline 
+ The naming conventions for advection field and advection constraint field \\
+  files is the same as for \diva 3D: advection condtraint files are named as: \\
+ \file{UVinfo.var.yyyy.zzzz.mmnn.$1xxxx$},\\
+ \file{Uvel.var.yyyy.zzzz.mmnn.$1xxxx$}, \\
+ \file{Vvel.var.yyyy.zzzz.mmnn.$1xxxx$}, and  a \file{constraint.dat} file, \\
+ and for reference fild files:\\
+ \file{var.yyyy.zzzz.mmnn.$1xxxx$.ascii.ref}, \\
+\file{var.yyyy.zzzz.mmnn.$1xxxx$.datapoint.ref} and \\
+ \file{var.yyyyzzzz.mmnn.$1xxxx$.ref}\\
+\hline
+\end{tabular}
+}
+
+\subsubsection{Using advection constraint and/or reference field }
+
+ The advection constraint and/or reference fields usage actions are acctivated by the corresponding flag values in \file{constandrefe} file (see example \ref{expconsreff}).
+The advection constraint option is acctivated when the corresponding flag value is equal to $1$. 
+The use of reference fields option is acctivated when the corresponding flag value is equal to $1$, in this case a year period  and month period codes must be provided in the corresponding lines.
+
+
+\begin{center}
+\begin{exfile}[H] %[htpb]
+\begin{footnotesize}
+\begin{verbatim}
+# advection flag
+0
+# reference field flag
+1
+# variable year code
+19002010
+# variable month code
+0103
+\end{verbatim}
+\end{footnotesize}
+\caption{\file{varlist}}
+\label{varlistexp}
+\end{exfile}
+\end{center}
+
+\begin{tabular}{|l|}
+\hline
+\hline
+\end{tabular}
+
+\pagebreak
+
+\subsection{\diva\ 4D climatology production output}
+
+The outputs are placed in \directory{output/3Danalysis/} and are the same as of the \diva\ 3D, in addition to the climatologies 4D-NetCDF files:
+
+\begin{description}
+
+\item[The 4D analysis files:] in NetCDF and GHER binary format.
+
+
+\begin{figure}[H]
+\centering
+\parbox{\textwidth}{
+\begin{tabular}{|lcl|} \hline
+\file{var.$yyyyzzzz$.4Danl.nc} & or & \file{var.4Danl.nc} ( of all year periods) \\ 
+\hline
+\end{tabular}
+%\end{footnotesize}
+}
+%\caption{Content of \directory{output/3Danalysis/}}
+\end{figure}
+
+
+\item[The 3D analysis files:] in NetCDF and GHER binary format.
+
+\begin{figure}[H]
+\centering
+\parbox{\textwidth}{
+%\begin{footnotesize}
+\begin{tabular}{|c|} \hline                                             
+\file{var.$yyyyzzzz.mmnn$.$1xxxx$.$1yyyy$.anl.nc} \\
+\file{var.$yyyyzzzz.mmnn$.$1xxxx$.$1yyyy$.errorfieldgher.anl} \\
+\file{var.$yyyyzzzz.mmnn$.$1xxxx$.$1yyyy$.fieldgher.anl} \\
+\file{var.$yyyyzzzz.mmnn$.$1xxxx$.$1yyyy$.fieldgher.ref} \\
+\file{var.$yyyyzzzz.mmnn$.$1xxxx$.$1yyyy$.ref.nc}  \\ 
+\hline
+\end{tabular}
+%\end{footnotesize}
+}
+%\caption{Content of \directory{output/3Danalysis/}}
+\end{figure}
+
+
+\item[A subdirectory \directory{Fields}] containing all the \diva 2D output files for all levels:
+
+
+\begin{figure}[H]
+\centering
+\parbox{\textwidth}{
+\begin{footnotesize}
+\begin{tabular}{|ll|} \hline
+
+\file{GridInfo.dat}                 & \file{var.$yyyyzzzz.mmnn$.$1xxxx$.ref } \\
+\file{var.$yyyyzzzz.mmnn$.$1xxxx$.anl}              & \file{var.$yyyyzzzz.mmnn$.$1xxxx$.ascii.ref } \\
+\file{var.$yyyyzzzz.mmnn$.$1xxxx$.anl.nc}           & \file{var.$yyyyzzzz.mmnn$.$1xxxx$.datapoint.ref} \\
+\file{var.$yyyyzzzz.mmnn$.$1xxxx$.ascii.anl}        & \file{var.$yyyyzzzz.mmnn$.$1xxxx$.ref.nc}        \\
+\file{var.$yyyyzzzz.mmnn$.$1xxxx$.outliersbis}      & \file{var.$yyyyzzzz.mmnn$.$1xxxx$.outliersbis.norm} \\
+\file{var.$yyyyzzzz.mmnn$.$1xxxx$.error}            & \\
+ \file{var.$yyyyzzzz.mmnn$.$1xxxx$.errorascii}      & \\
+ \file{var.$yyyyzzzz.mmnn$.$1xxxx$.valatxyasc.ref}  & \\
+ \file{valatxy.var.$yyyyzzzz.mmnn$.$1xxxx$}         & \\
+\hline
+\end{tabular}
+\end{footnotesize}
+}
+%\caption{Content of \directory{output/3Danalysis/Fields/}}
+\end{figure}
+
+
+\item[A subdirectory \directory{datadetrend}:] it contains trend data set files for all levels \linebreak \file{trends.$i$.dat.var.$yyyyzzzz.mmnn$.$1xxxx$} ($i$ is the group number).
+
+
+\item[A subdirectory \directory{Meshes}:] it contains the mesh files, so that they can be re-used for other applications.
+
+
+\end{description}
+
+\pagebreak 
+%\vspace{0.5cm}
+
+\subsection{{\tt driver} file: actions and flag values}
+
+\label{driverflags}
+
+All actions performed by \file{divadoall} are prescribed in the file \file{driver} through flag values. In this section all possible actions and corresponding flag values are listed:
+
+
+\begin{itemize}
+\item {\bf Data extraction}: Possible flag values: $0$,$1$,$-1$ and $-10$. If you activate the data extraction (flag value $\neq 0$) in the {\tt driver} file, the execution of {\tt divadoall} will run the {\tt divaselectorODV4} automatically, including interpolation to the levels specified in {\tt contour.depth}. Data will be extracted from the ODV spreadsheat file(s) specified in {\tt datasource}. {\tt divaselectorODV4} will recognises if the data export to ODV file was done with depths in ``meters'' or it was done with pressure (in dbar) vertical coordinate, you can either choose to map it as if they were meters or apply the Saunders correction. Choose flag $=-1$ to use pressure coordinate and assume they are meters, and flag value $=-10$ to use pressure coordinates and transform to meters by using the Saunders approach.\par
+ If there is a {\tt qflist} file, the selection with {\tt divaselectorODV4} will only use those measurements for which the quality flag is one of those found in the file {\tt qflist}. In the absence of {\tt qflist}, no quality flag analysis is done and all data taken.\par
+{\bf Note:} you can specify several ODV4 spreadsheet files as input files, one file name (or full path) per line in \file{datasource} file, {\it they must have the same variables naming convention, depth coordinates and quality flags conventions}.
+
+\item {\bf Boundary lines and coastlines generation}: Possible flag values are $0$, $1$,  $2$ and  $3$. When this action is activated (flag $\geq 1$), you must provide in the {\tt input} directory the files {\tt TopoInfo.dat} and  {\tt topo.grd} in addition to {\tt contour.depth} file.
+              \begin{itemize}
+                \item[*] $=1$ if contour files are to be generated,
+                \item[*] $=2$ if advection constraint (Anisotropic correlation along topography) files are to be generated from  \texttt{topo.grd},
+                \item[*] $=3$ if contour files and advection constraint are to be generated.
+              \end{itemize}
+
+\item {\bf Cleaning data and Relative Length}: Possible flag values are $0$, $1$, $2$, $3$, $4$ and $5$:
+              \begin{itemize}
+                \item[*] $=1$ if data files are to be cleaned,
+                \item[*] $=2$ if relative length files are to be generated,
+                \item[*] $=3$ if data files are to be cleaned and relative length files are to be generated.
+                \item[*] $=4$ if outliers are to be cleaned from data files.
+                \item[*] $=5$ if outliers are to be cleaned from data files and, relative length files to be generated.
+              \end{itemize}
+
+
+\item {\bf Parameter optimization}: Possible flag values are $0$, $1$, $2$, $3$, $-1$, $-2$, $-3$, $10$, $-10$, $30$ and $-30$:
+              \begin{itemize}
+                \item[*] $=1$ if correlation length parameters are to be estimated,
+                \item[*] $=2$ if signal to noise ratio ($S/N$) parameters are to be estimated,
+                \item[*] $=-1$ if correlation length parameters are to be estimated and vertically filtered,
+                \item[*] $=-2$ if signal to noise ratio ($S/N$) parameters are to be estimated and vertically filtered,
+                \item[*] $=3$ if both  correlation length and  signal to noise ratio parameters are to be estimated,
+                \item[*] $=-3$ if both  correlation length and  signal to noise ratio parameters are to be estimated and vertically filtered,
+
+                \item[*] $=10$ if correlation length parameters are to be estimated using data mean distance as a minimum,
+                \item[*] $=-10$ if correlation length parameters are to be estimated using data mean distance as a minimum and vertically filtered,
+                \item[*] $=30$ if both  correlation length and  signal to noise ratio parameters are to be estimated using data mean distance as a minimum (for $CL$),
+                \item[*] $=-30$ if both  correlation length and  signal to noise ratio parameters are to be estimated using data mean distance as a minimum (for $CL$), and both parameters vertically filtered.
+% and generated relative length fields (for $S/N$)
+              \end{itemize}
+
+\item {\bf Analysis}: analysis and reference fields can be performed in different ways:
+  \begin{itemize}
+  \item  {\bf Perform analysis}: Possible flag values are $1$, $10$, $11$, $12$, $13$ and $14$:
+              \begin{itemize}
+                \item[*] $=1$ if analysis fields of the given variable are to be performed for all the layers between $L_1$ and $L_2$ which are the flag values for {\it lowerlevel number} and {\it upperlevel number} in the {\tt driver}.
+                \item[*] $=11$ if analysis fields of the given variable are to be performed with $\exp$(data)-$\log$(analysis) transformation
+                \item[*] $=13$ if analysis fields of the given variable are to be performed with anamorphosis transformation
+                \item[*] $=14$ if analysis fields of the given variable are to be performed with user choosen transformation function.
+              \end{itemize}
+   \item  {\bf Perform reference fields}: Possible flag values are $2$, $20$, $21$, $22$, $23$ and $24$:
+              \begin{itemize}
+                \item[*] $=2$ if semi normed reference fields of the given variables (prescribed in {\tt varlist} and for time periods described in {\tt yearlist} and {\tt monthlist}) are to be performed for all the layers between $L_1$ and $L_2$, which are the flag values for {\it lowerlevel number} and {\it upperlevel number} in the {\tt driver}.
+                \item[*] $=21$ if analysis fields of the given variable are to be performed with $\log$(data)-$\exp$(analysis) transformation
+                \item[*] $=23$ if reference fields of the given variable are to be performed with anamorphosis transformation
+                \item[*] $=24$ if reference fields of the given variable are to be performed with user choosen transformation function.
+              \end{itemize}
+  \item  {\bf Adding $100$ to the flag value}:
+              \begin{itemize}
+               \item[*] $=101$ or $=11x$ allows performing analysis using reference fields for each layer using all data from the two neighbouring layers in addition to the layer data set. Only reference fields are performed
+               \item[*] $=102$ or $=12x$ allows performing reference fields for each layer using all data from the two neighbouring layers in addition to the layer data set.
+              \end{itemize}
+   \end{itemize}
+\item {\bf Gnuplot plots}: Possible flag values are $0$ and $1$. Activate this action for a quick visualization (and assessment) of the climatology production, {\tt gnuplot} executions can be included in the production process.\par 
+There are a few controls you can apply for these gnuplot plots:
+\begin{itemize}
+\item[*] {\tt VAR.bounds}: contains the lower and upper bounds during the plotting for the variable {\tt VAR} (which is one of the variable names found in {\tt varlist}) 
+\item[*] {\tt VAR.pal}: contains the color palette for the same variable.
+\item[*] {\tt plotboundingbox.dat}: contains the box for plotting. This is typically used to plot only the region of interest, without overlapping regions with other climatologies (the numerical fields include the overlapping regions, only the plotting is limited with the {\tt plotboundingbox.dat} file).
+\end{itemize}
+{\bf Note}: the gnuplot colorbars use a scale that is actually remapped to the bounds found in {\tt VAR.bound}. Exemple:
+if your colorbar definition goes from 0 to 10 and the {\tt VAR} bounds are from 0 and 100, a value of 50 in the variable analyzed will use the color found in the colorbar definition at value 5. To help you designing a specially adapted colorbar lets say for salinity, it is therefore a good idea to define the colorbar with the same bounds as those in {\tt VAR.bounds}.\par
+{\bf Note}: for adapting the color palette, file {\tt gnuplotcolornames} contains a list of preexisting colors and their hexadecimal codes you can use instead of names.
+
+\item {\bf Detrending} Possible flag values are $0$ and $n$: the action is activated when choosing flag value an integer $n$ $>0$. The chosen value $n$ must be equal or smaller to groups number in data files.\par
+{\bf Note}: If you use {\tt divadoall} (or {\tt divaselectorODV4}) to extract data and create data input files, columns 5, 6 ,7 and 8 contain respectively groups years, month, days and hours (1 for the first year in the selection etc).
+\end{itemize}
 
