--- a/20-DivaPublications.bib
+++ b/20-DivaPublications.bib
@@ -654,6 +654,17 @@
   url = {http://www.sciencedirect.com/science/article/B6V7D-46TB0P2-C/2/49937e4939d29fab010dc7f0af310bc8}
 }
 
+@ARTICLE{SCHWEIKERT66,
+  author = {D. G Schweikert},
+  title = {An interpolation curve using a spline in tension},
+  journal = jmp,
+  year = {1966},
+  volume = {45},
+  pages = {312-317},
+  owner = {charles},
+  timestamp = {2011.10.14}
+}
+
 @ARTICLE{SHEN98b,
   author = {Shen, S. and Smith, T. and Ropelewski, C. and Livezey, R.},
   title = {An optimal regional averaging method with error estimates and a test
