--- a/8-DivaConstraints.tex
+++ b/8-DivaConstraints.tex
@@ -296,7 +296,7 @@ when calculating the misfit in the minimisation part of \diva , we include now a
 \begin{equation}
 \sum_{i\in C_1} \mu_i \left[ d_i -d_{C_1}- \varphi(x_i,y_i) \right]^2 + \sum_{i\in C_2} \mu_i \left[ d_i -d_{C_2}- \varphi(x_i,y_i) \right]^2 + ...
 \end{equation}
-If we assume we know the function $\varphi(x,y)$, minimisation with respect to each of the unkowns $d_{C_j}$ yields
+If we assume we know the function $\varphi(x,y)$, minimisation with respect to each of the unknowns $d_{C_j}$ yields
 
 
 \begin{equation}
