--- a/2-DivaAcknowledgement.tex
+++ b/2-DivaAcknowledgement.tex
@@ -19,9 +19,9 @@ We would like to thank:
 \newline
 \newline
 the participants to the \diva workshops in Li\`{e}ge (November 2006), in Calvi (November 2007, October 2008, October 2009 and November 2010) and in Roumaillac (October 2012) for their numerous valuable comments to improve the software and the manual;
-%\newlineOc
-%\newline
-%the \gher\, team for its constant support;
+\newline
+\newline
+J~Carstensen (Aarhus University, Denmark) for his contribution in the implementation of the \textit{detrending}.
 \newline
 \newline 
 the National Fund for Scientific Research (FRS-FNRS, Belgium) for funding the post-doctoral positions of A.~Alvera-Azc\'{a}rate and A.~Barth, as well as supercomputer facilities;
